@@ -3,3 +3,4 @@ WatchMDH - New site
 Pornhoarder - Fix listings
 Uflash - Fix
 NoodleMagazine - Fix playback and images
+XFreeHD - Fix playback
